# resturant_ai_agent

./: .env  .env.example  README.md  TESTING.md  deploy-local.sh  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  test-docker-quick.sh  test-setup.sh
.github/workflows/: RUNNER_SETUP.md  ci-cd.yml  code-quality.yml
Backend/: .env  Dockerfile  main.py  pyproject.toml  requirements.txt  test.py  test_agent_init.py  test_markdown_output.py  test_rag_menu.py
Backend/Backend/Rag/vectorstore/: chroma.sqlite3
Backend/Rag/: build_index.py  knowledge_base.py  menu.json  prompts.py
Backend/Rag/vectorstore/: chroma.sqlite3
Backend/agents/: food_agent.py  prompts.py  tools.py
Backend/api/: health.py  main.py  menu_routes.py  order_routes.py  rag_routes.py
Backend/db/: menu.db  schema.sql  setup_menu_db.py
Backend/services/: menu_service.py  order_service.py  rag_service.py
Backend/utils/: db_utils.py  logger.py
Frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
Frontend/src/: App.jsx
